--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,4 @@
 /** @format */
-@import 'tailwindcss';
 @import '@/styles/reset';
 @import '@/styles/common';
 @import '@/assets/iconfont/iconfont';
@@ -8,6 +7,12 @@
 @import 'element-plus/theme-chalk/dark/css-vars.css';
 @import '@/styles/element-dark';
 @import '@/styles/element';
+/* stylelint-disable-next-line scss/at-rule-no-unknown */
+@tailwind base;
+/* stylelint-disable-next-line scss/at-rule-no-unknown */
+@tailwind components;
+/* stylelint-disable-next-line scss/at-rule-no-unknown */
+@tailwind utilities;
 :root {
   --el-font-size-base: 16px;
 }
