--- a/src/views/login/index.scss
+++ b/src/views/login/index.scss
@@ -2,7 +2,7 @@
   height: 100%;
   min-height: 550px;
   background-color: #eeeeee;
-  background-image: url("@/assets/images/login_bg.svg");
+  background-image: url('@/assets/images/login_bg.svg');
   background-size: 100% 100%;
   background-size: cover;
   .login-box {
@@ -51,19 +51,6 @@
           font-weight: bold;
           color: #34495e;
           white-space: nowrap;
-        }
-      }
-      .el-form-item {
-        margin-bottom: 40px;
-      }
-      .login-btn {
-        display: flex;
-        justify-content: space-between;
-        width: 100%;
-        margin-top: 40px;
-        white-space: nowrap;
-        .el-button {
-          width: 185px;
         }
       }
     }
